# memory_allocator

EMA/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  README.md  auto.sh  main.cpp
reference/MNN/: AutoStorage.h  CMakeLists.txt  MNNFileUtils.cpp  auto.sh  main.cpp
reference/MNN/MNN/: ErrorCode.hpp  HalideRuntime.h  MNNDefine.h  Tensor.hpp
reference/MNN/core/: BufferAllocator.cpp  BufferAllocator.hpp  MNNMemoryUtils.cpp  MNNMemoryUtils.h  Macro.h
reference/MemoryPool/: README.md
